# Compiler_for_Alex

./: .gitignore  CMakeLists.txt  README.md  build.bat  codegen.h  common.h  lexer.cpp  main.cpp  parser.cpp  parser.h  semantic.h  token.h
CodeGen/: codegen.cpp  codegen.h
Lexer/: lexer.cpp  lexer.h
Parser/: ast.h  parser.cpp  parser.h
Semantic/: semantic.cpp  semantic.h
examples/: demo.al
